--- a/src/main/resources/assets/jurassicuniverse/lang/en_us.json
+++ b/src/main/resources/assets/jurassicuniverse/lang/en_us.json
@@ -6,5 +6,6 @@
   "item.jurassicuniverse.keyboard": "Keyboard",
   "item.jurassicuniverse.ostrich_egg": "Ostrich Egg",
   "item.jurassicuniverse.monitor": "Monitor",
-  "item.jurassicuniverse.unusable_dna_test_tube": "Unusable DNA Filled Test Tube"
+  "item.jurassicuniverse.unusable_dna_test_tube": "Unusable DNA Filled Test Tube",
+  "item.jurassicuniverse.tracking_chip": "Tracking Chip"
 }
