--- a/src/main/resources/assets/jurassicuniverse/lang/en_us.json
+++ b/src/main/resources/assets/jurassicuniverse/lang/en_us.json
@@ -1,5 +1,5 @@
 {
-  "item.jurassicuniverse.ingen_field_guide": "Ingen_Field_Guide",
+  "item.jurassicuniverse.ingen_field_guide": "Ingen Field Guide",
   "item.jurassicuniverse.mosquito_amber": "Mosquito in Amber",
   "item.jurassicuniverse.empty_syringe": "Empty Syringe",
   "item.jurassicuniverse.empty_test_tube": "Empty Test Tube",
