--- a/src/main/resources/assets/jurassicuniverse/lang/en_us.json
+++ b/src/main/resources/assets/jurassicuniverse/lang/en_us.json
@@ -7,5 +7,11 @@
   "item.jurassicuniverse.ostrich_egg": "Ostrich Egg",
   "item.jurassicuniverse.monitor": "Monitor",
   "item.jurassicuniverse.unusable_dna_test_tube": "Unusable DNA Filled Test Tube",
-  "item.jurassicuniverse.tracking_chip": "Tracking Chip"
+  "item.jurassicuniverse.tracking_chip": "Tracking Chip",
+
+  "block.jurassicuniverse.amber_ore": "Amber Ore",
+  "block.jurassicuniverse.deepslate_amber_ore": "Deepslate Amber Ore",
+
+  "itemGroup.jurassicitems": "Jurassic Items",
+  "itemGroup.jurassicblocks": "Jurassic Blocks"
 }
