--- a/src/main/resources/assets/jurassicuniverse/lang/en_us.json
+++ b/src/main/resources/assets/jurassicuniverse/lang/en_us.json
@@ -15,7 +15,10 @@
   "block.jurassicuniverse.deepslate_fossil": "Deepslate Fossil",
   "block.jurassicuniverse.fossil": "Fossil",
 
+  "block.jurassicuniverse.fossil_cleaner": "Fossil Cleaner",
+
   "itemGroup.jurassicitems": "Jurassic Items",
-  "itemGroup.jurassicblocks": "Jurassic Blocks"
+  "itemGroup.jurassicblocks": "Jurassic Blocks",
+  "itemGroup.jurassicmachines": "Jurassic Machines"
 
 }
